@@ -87,6 +87,7 @@
     * Added api/settings/sn endpoint for setup S/N of the printer
     * Wizard is locked after successful configuration
     * Added endpoint for control of printhead movement
+    * Added endpoint GET api/settings/sn
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
